# fake-imarkt

./: .env.template  .gitignore  .gitlab-ci.yml  README.md  docker-compose.override.yml  docker-compose.yml  requirements.txt
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: hello.py  login.py  profile.py
app/core/: config.py  jwt.py
app/schemas/: hello_response.py  user.py
app/src/: jwt_auth.py
backend/: celeryworker.dockerfile
backend/app/: pyproject.toml  tests-start.sh  worker-start.sh
backend/app/app/: main.py
backend/app/app/api/v1/endpoints/: login.py
backend/app/src/: config.py  main.py
backend/app/src/auth/: jwt_auth.py
backend/app/src/profile/api/v1/: api.py
backend/app/src/profile/api/v1/endpoints/: profile.py
frontend/: .env.template  Dockerfile
frontend-desktop/: .env.template  Dockerfile  package-lock.json  package.json
frontend-mobile/: package-lock.json  package.json
