[tool.poetry]
name = "fake-imarkt"
version = "0.1.0"
description = ""
authors = ["mrSakur <mrsakur@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.5"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
pydantic = "^1.10.5"
gunicorn = "^20.1.0"
alembic = "^1.9.4"
sqlalchemy = "^2.0.4"
pytest = "^7.2.1"
tenacity = "^8.2.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
black = "^23.1.0"
isort = "^5.12.0"
autoflake = "^2.0.1"
flake8 = "^6.0.0"
pytest = "^7.2.1"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^4.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
